# langchain-practice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
docs/: poetry_setup.md  python_setup.md
notebooks/: basic_langchain.py
